--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "fastify": "^4.25.2"
+    "dotenv": "^16.4.5",
+    "fastify": "^4.25.2",
+    "groq-sdk": "^0.5.0"
   }
 }
