--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "fastify": "^4.25.2",
+    "fastify-cors": "^6.1.0",
     "groq-sdk": "^0.5.0"
   }
 }
