--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.25.2",
-    "fastify-cors": "^6.1.0",
     "groq-sdk": "^0.5.0"
   }
 }
